# pop-launcher-plugin-github

./: .gitignore  Cargo.toml  install.sh  plugin.ron
src/: config.rs  main.rs  model.rs
