[package]
name = "pop-launcher-plugin-github"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pop-launcher = { git = "https://github.com/pop-os/launcher", version = "1.2.1"  }
octocrab = "0.15"

[dependencies.tokio]
version = "1.18.2"
features = ["io-std"]