[package]
name = "pop-launcher-plugin-github"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pop-launcher-toolkit=  {git = "https://github.com/pop-os/launcher"  }
octocrab = "0.16.0"
tokio-stream = "0.1.8"
serde = { version = "1.0.137"}
ron = "0.7.0"
anyhow = "1.0.57"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", default-features = false, features = ["std", "fmt", "env-filter"] }
dirs = "4.0.0"

[dependencies.tokio]
version = "1.18.2"
features = ["io-std", "rt", "sync"]